--- a/ml/Predictor/Predictor.csproj
+++ b/ml/Predictor/Predictor.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="AzureFunctions.Extensions.DependencyInjection" Version="1.1.3" />
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.1.0" />
     <PackageReference Include="Microsoft.Extensions.ML" Version="1.5.2" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Logging.ApplicationInsights" Version="3.0.23" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
