--- a/.github/workflows/dotnet-serving.yml
+++ b/.github/workflows/dotnet-serving.yml
@@ -12,6 +12,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Pulumi - Setup CLI
+      run: |
+        curl https://get.pulumi.com | bash
+        echo "::add-path::$HOME/.pulumi/bin/"
     - uses: actions/checkout@v2
       name: Checkout unshallow
       with:
