--- a/.github/workflows/dotnet-serving.yml
+++ b/.github/workflows/dotnet-serving.yml
@@ -12,13 +12,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Pulumi - Setup CLI
-      run: |
-        curl https://get.pulumi.com | bash
     - uses: actions/checkout@v2
       name: Checkout unshallow
       with:
         fetch-depth: 0
+    - name: Pulumi - Setup CLI
+      run: |
+        curl https://get.pulumi.com | bash
+    - name: Pulumi - Init new project by current SHA commit
+      working-directory: ./infra
+      run: |
+        pulumi preview
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
