--- a/.github/workflows/dotnet-serving.yml
+++ b/.github/workflows/dotnet-serving.yml
@@ -23,6 +23,8 @@ jobs:
       working-directory: ./infra
       run: |
         pulumi preview
+      env:
+        PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
