--- a/.github/workflows/dotnet-serving.yml
+++ b/.github/workflows/dotnet-serving.yml
@@ -16,6 +16,8 @@ jobs:
       name: Checkout unshallow
       with:
         fetch-depth: 0
+    - name: Set env variable for short SHA
+      run: echo ::set-env name=GITHUB_SHA_SHORT::$(echo $GITHUB_SHA | cut -c 1-6)
     - name: Pulumi - Setup CLI
       run: |
         curl https://get.pulumi.com | bash
