--- a/.github/workflows/dotnet-serving.yml
+++ b/.github/workflows/dotnet-serving.yml
@@ -29,6 +29,7 @@ jobs:
     - name: Pulumi - Init new project by current SHA commit
       working-directory: ./infra
       run: |
+        pulumi stack select lucamilan/infra/dev
         pulumi preview
       env:
         PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
