--- a/.github/workflows/dotnet-serving.yml
+++ b/.github/workflows/dotnet-serving.yml
@@ -30,6 +30,11 @@ jobs:
       working-directory: ./infra
       run: |
         pulumi stack select lucamilan/infra/dev
+        pulumi config set azure:location westeurope
+        pulumi config set azure:clientId ${{ secrets.AZURE_CLIENT_ID }} 
+        pulumi config set azure:clientSecret ${{ secrets.AZURE_SECRET }} --secret  
+        pulumi config set azure:tenantId ${{ secrets.AZURE_TENANT_ID }}  
+        pulumi config set azure:subscriptionId ${{ secrets.AZURE_SUBSCRIPTION_ID }}
         pulumi preview
       env:
         PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
