--- a/.github/workflows/dotnet-serving.yml
+++ b/.github/workflows/dotnet-serving.yml
@@ -54,7 +54,7 @@ jobs:
     - name: Pulumi - Init new project by current SHA commit
       working-directory: ./infra
       run: |
-        pulumi stack select ${{ env.PULUMI_STACK_NAME }}
+        pulumi stack select ${{ env.PULUMI_STACK_NAME }} --non-interactive --create
         pulumi config set azure:location westeurope
         pulumi config set azure:clientId ${{ secrets.AZURE_CLIENT_ID }} 
         pulumi config set azure:clientSecret ${{ secrets.AZURE_SECRET }} --secret  
