--- a/.github/workflows/dotnet-serving.yml
+++ b/.github/workflows/dotnet-serving.yml
@@ -1,6 +1,7 @@
 name: .NET
 
 env:
+  "ML_MODEL_VERSION": 0.1.0-b8e1e1a
   "ML_MODEL_URI": https://github.com/igoran/dnc-mlops-model-training/releases/download/0.1.0-b8e1e1a/0.1.0-b8e1e1a.zip
   "PULUMI_STACK_NAME": lucamilan/infra/dev
 
