--- a/.github/workflows/dotnet-serving.yml
+++ b/.github/workflows/dotnet-serving.yml
@@ -59,6 +59,6 @@ jobs:
         pulumi config set azure:clientSecret ${{ secrets.AZURE_SECRET }} --secret  
         pulumi config set azure:tenantId ${{ secrets.AZURE_TENANT_ID }}  
         pulumi config set azure:subscriptionId ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        pulumi up --non-interactive
+        pulumi up --non-interactive --yes
       env:
         PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
