--- a/.github/workflows/dotnet-serving.yml
+++ b/.github/workflows/dotnet-serving.yml
@@ -20,8 +20,8 @@ jobs:
     steps:
     - name: Print Payload Data
       run: |
-        echo ${ github.event.client_payload.message.ML_MODEL_VERSION:-ML_MODEL_VERSION }
-        echo ${ github.event.client_payload.message.ML_MODEL_URI:-ML_MODEL_URI}
+        echo ${{ github.event.client_payload.message.ML_MODEL_VERSION }}
+        echo ${{ github.event.client_payload.message.ML_MODEL_URI}}
       env:
         ML_MODEL_VERSION: ${ github.event.client_payload.message.ML_MODEL_VERSION:-ML_MODEL_VERSION }
         ML_MODEL_URI: ${ github.event.client_payload.message.ML_MODEL_URI:-ML_MODEL_URI }
