--- a/ml/Predictor/Predictor.csproj
+++ b/ml/Predictor/Predictor.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="Services\" />
   </ItemGroup>
   <ItemGroup Condition="'$(Configuration)' == 'Debug'">
     <None Include="$(SolutionDir)data\model.zip" CopyToOutputDirectory="PreserveNewest" LinkBase="\" />
