--- a/.github/workflows/dotnet-serving.yml
+++ b/.github/workflows/dotnet-serving.yml
@@ -62,3 +62,7 @@ jobs:
         pulumi up --non-interactive --yes
       env:
         PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
+    - name: Run Smoke Test against GKE
+      run: |
+        echo 'Initializing Smoke Tests on the Azure Function'
+        ./tests/smoke_test.sh
