--- a/.github/workflows/dotnet-serving.yml
+++ b/.github/workflows/dotnet-serving.yml
@@ -62,7 +62,9 @@ jobs:
         pulumi up --non-interactive --yes
       env:
         PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
-    - name: Run Smoke Test against GKE
+    - name: Run Smoke Test against Azure Function
+      working-directory: ./tests
       run: |
         echo 'Initializing Smoke Tests on the Azure Function'
-        ./tests/smoke_test.sh
+        sh chmod +x smoke.sh
+        ./smoke_test.sh
