--- a/.github/workflows/dotnet-serving.yml
+++ b/.github/workflows/dotnet-serving.yml
@@ -63,6 +63,7 @@ jobs:
       env:
         PULUMI_ACCESS_TOKEN: ${{ secrets.PULUMI_ACCESS_TOKEN }}
     - name: Make smoke scripts executable
+      working-directory: ./tests
       run: |
         chmod +x ./smoke.sh
         chmod +x ./smoke_test.sh
