--- a/.github/workflows/dotnet-serving.yml
+++ b/.github/workflows/dotnet-serving.yml
@@ -20,6 +20,9 @@ jobs:
     steps:
     - name: Assign Payload Data
       if: ${{ github.event.client_payload.message.ML_MODEL_VERSION != '' }}
+      run: |
+        echo "Assigning ML_MODEL_VERSION to ${{ github.event.client_payload.message.ML_MODEL_VERSION }}"
+        echo "Assigning ML_MODEL_URI to ${{ github.event.client_payload.message.ML_MODEL_URI }}"
       env:
         ML_MODEL_VERSION: ${{ github.event.client_payload.message.ML_MODEL_VERSION }}
         ML_MODEL_URI: ${{ github.event.client_payload.message.ML_MODEL_URI }}
